<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EmailActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/wavetop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_border"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/verifyCodeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_border"
        android:hint="@string/verify_code"
        android:inputType="number"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/verifyEmailButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/verify_e_mail"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/verifyCodeEditText"
        app:layout_constraintStart_toStartOf="@+id/verifyCodeEditText"
        app:layout_constraintTop_toBottomOf="@+id/verifyCodeEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/verifyCodeEditText"
        app:layout_constraintStart_toStartOf="@+id/verifyCodeEditText"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmailButton" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button2"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/verifyCodeEditText"
        app:layout_constraintStart_toStartOf="@+id/verifyCodeEditText"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />


</androidx.constraintlayout.widget.ConstraintLayout>