<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.489">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="GANO Hesaplama"
            android:textColor="@color/naber"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Ders Sayısı"
                    android:gravity="center"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:entries="@array/ders_sayisi"
                    android:prompt="@string/ders_sayisi"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/krdi"
                    android:layout_marginTop="1dp"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/k1"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:gravity="center"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/k1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/k2"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:gravity="center"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/k2"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/k3"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:gravity="center"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/k3"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/k4"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/k4"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/k5"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/k6"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:gravity="center"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/k7"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="visible" />
                <EditText
                    android:id="@+id/k8"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="visible" />
                <EditText
                    android:id="@+id/k9"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="visible" />
                <EditText
                    android:id="@+id/k10"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="visible" />
                <EditText
                    android:id="@+id/k11"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Harf Sistemi"
                    android:gravity="center"/>
                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:entries="@array/harf_sistemi"
                    android:prompt="@string/harf_sistemi"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="151dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="1dp"
                    android:gravity="center"
                    android:text="@string/harf_n"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/h1"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/h1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/h2"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/h2"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/h3"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:gravity="center"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/h3"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/h4"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:gravity="center"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/h4"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/h5"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/h6"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/h7"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="invisible" />
                <EditText
                    android:id="@+id/h8"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="invisible" />
                <EditText
                    android:id="@+id/h9"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="invisible" />
                <EditText
                    android:id="@+id/h10"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="invisible" />
                <EditText
                    android:id="@+id/h11"
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="invisible" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="73dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:text=""
            android:textColor="@color/grey"
            android:textSize="16pt"

            />
        <Button
            android:id="@+id/Hesapla"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/button"
            android:text="@string/Hesapla"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"


            />





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>